Fixed rerouting bug when session timeout, now refreshes to splash then login screen. Prevent show login screen when logged in. Added notifications (bundle), not completely functional. Added functionality to check if sensors are inactive or in notification state. Last updated time implemented and added to sensors/devices overview. Sensor disabled state (gauge) when sensor state is inactive. Implemented new group creation when controller/device/sensor is linked to store during installation, group name is Uid of controller.

--- a/src/AppBundle/Resources/public/translations/en.json
+++ b/src/AppBundle/Resources/public/translations/en.json
@@ -212,7 +212,14 @@
         "TRIP_HIGH": "Trip high",
         "SWITCH_WHEN": "Switch when",
         "HIGH": "High",
-        "LOW": "Low"
+        "LOW": "Low",
+        "LAST_UPDATED": "Last updated on: ",
+        "STATE": {
+            "LABEL": "State",
+            "ACTIVE": "Active",
+            "INACTIVE": "Inactive",
+            "NOTIFIED": "Notified"
+        }
     },
     "NOTIFICATIONS": {
         "LABEL": "Notifications"
