--- a/src/AppBundle/Resources/public/translations/en.json
+++ b/src/AppBundle/Resources/public/translations/en.json
@@ -235,6 +235,7 @@
         "DESCRIPTION": "Description",
         "TEMPERATURE": "Temperature",
         "INPUT": "Input",
+        "TRIP": "Omslag",
         "TRIP_LOW": "Trip low",
         "TRIP_HIGH": "Trip high",
         "SWITCH_WHEN": "Switch when",
@@ -242,6 +243,7 @@
         "LOW": "Low",
         "LAST_UPDATED": "Last updated on: ",
         "NOTIFY_AFTER": "Notify after",
+        "SHOW_SENSOR": "Show sensor",
         "STATE": {
             "LABEL": "State",
             "ACTIVE": "Active",
@@ -250,7 +252,10 @@
         }
     },
     "NOTIFICATIONS": {
-        "LABEL": "Notifications"
+        "LABEL": "Notifications",
+        "OPEN_NOTIFICATIONS": "Open notifications",
+        "CLOSED_NOTIFICATIONS": "Closed notifications",
+        "HANDLE": "Handle"
     },
     "INSTALLATION": {
         "LABEL": "Installation",
@@ -278,7 +283,8 @@
         "COPY_COMPANY_DATA": "Copy all company data?",
         "DELETE_GROUP": "Delete group?",
         "UNLINK_SENSOR": "Unlink sensor / device from store?",
-        "NEW_PASSWORD": "Generate new password for user?"
+        "NEW_PASSWORD": "Generate new password for user?",
+        "HANDLE_NOTIFICATION": "Handle notification?"
     },
     "AUTH": {
         "USERNAME": "Username",
