Collection attachment rotate image implemented. Collector log completed, now temperature's uid's and name's can be toggled in the main table view.

--- a/src/AppBundle/Resources/public/translations/en.json
+++ b/src/AppBundle/Resources/public/translations/en.json
@@ -342,7 +342,8 @@
         "CREATED_BY": "Created by",
         "EDITED_BY": "Edited by",
         "PUBLISHED": "Published",
-        "UPLOAD": "Upload"
+        "UPLOAD": "Upload",
+        "ROTATE_IMAGE": "Rotate image 90°"
     },
     "MAINTENANCE": {
         "LABEL": "Maintenance",
