Implemented phone friendly administration dashboard.

--- a/src/AppBundle/Resources/public/translations/en.json
+++ b/src/AppBundle/Resources/public/translations/en.json
@@ -25,6 +25,7 @@
     "REFRESH": "Refresh",
     "BACK": "Back",
     "START": "Start",
+    "MANAGE": "Manage",
     "DROPZONE": {
         "DROP_FILES": "Drop files here."
     },
