Implemented graphical sensor information (log based).

--- a/src/AppBundle/Resources/public/translations/en.json
+++ b/src/AppBundle/Resources/public/translations/en.json
@@ -301,6 +301,8 @@
         "ACTIVE": "Active",
         "EDIT_SENSOR": "Edit sensor",
         "UID": "UID Number",
+        "DATE": "Date",
+        "TIME": "Time",
         "NAME": "Name",
         "INPUT_NUMBER": "Input",
         "OUTPUT_NUMBER": "Output",
