--- a/src/AppBundle/Resources/public/translations/nl.json
+++ b/src/AppBundle/Resources/public/translations/nl.json
@@ -301,6 +301,8 @@
         "ACTIVE": "Actief",
         "EDIT_SENSOR": "Sensor bewerken",
         "UID": "UID Number",
+        "DATE": "Datum",
+        "TIME": "Tijd",
         "NAME": "Naam",
         "INPUT_NUMBER": "Ingang",
         "OUTPUT_NUMBER": "Uitgang",
